# window-manager

./: CMakeLists.txt  README.md
config/: config.yaml
src/: Buttons.hpp  CMakeLists.txt  Config.hpp  Constants.hpp  Controls.hpp  Error.hpp  Keys.hpp  Utils.hpp  WindowController.hpp  WindowManager.hpp  main.cpp
